src/pages/shift-availability/shift-availability.scss
.shift-availability-item {
  ion-item-group {
    ion-item:first-child, ion-item:last-child {
      border-bottom: 0.55px solid #c8c7cc;
    }
  }
}

button.dislike {
  background-color: #f44336;
  color: #FFF;
  font-weight: 600!important;
  i {
    font-size: 20px!important;
  }
}

button.like {
  background-color: #4caf50;
  color: #fff;
  font-weight: 600!important;
  i {
    font-size: 20px!important;
  }
}

.large-fab, .large-fab:after, .large-fab:before {
  font-size: 32px!important;
  font-weight: 600!important;
}

.shift-availability-item {
  ion-item-group {
    ion-item.item {
      height: 64.55px!important;
    }
    ion-item {
      ion-note {
        div.badge.right-badge {
          width: 100%;
          max-width: 200px;
          text-transform: lowercase;
          margin-top: 3px;
          margin-bottom: 3px;
        }
        div.badge.right-badge.all_day {
          text-transform: capitalize;
        }
      }
      ion-note {
        div.badge.right-badge.badge-green {
          background-color: #4caf50;
        }
      }
    }
  }
}

